add my first blog

--- a/index.html
+++ b/index.html
@@ -121,11 +121,15 @@
       <div class="blah w-100">
         <h1 class="f3 fw1 athelas mt0 lh-title">
           <a href="http://example.org/posts/my-first-post/" class="color-inherit dim link">
-            My First Post
+            How to create a Hugo website
             </a>
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-          This is my first hugo blog post 
+          Install Hugo Follow the instructions on Hugo's website to install Hugo.
+All your posts are in markdown format and you can edit them under ./content/posts directory.
+Once you are satisfied with how your blog looks, you can then call:
+hugo -D This will build all the static pages and the output will be in ./public/ directory.
+Deployment Now you just need to deploy these static pages. To do that, you need to have a domain.
         </div>
           <a href="http://example.org/posts/my-first-post/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
         
