--- a/cn/index.html
+++ b/cn/index.html
@@ -17,8 +17,8 @@
            "@id": "https:\/\/xipu99.github.io\/"
       },
       "articleSection" : "",
-      "name" : "Xi Pu\x27s blog",
-      "headline" : "Xi Pu\x27s blog",
+      "name" : "Testing",
+      "headline" : "Testing",
       "description" : "",
       "inLanguage" : "en-US",
       "author" : "",
@@ -33,15 +33,15 @@
       "keywords" : [  ]
   }
 </script>
-<title>Xi Pu&#39;s blog</title>
-  <meta property="og:title" content="Xi Pu&#39;s blog" />
+<title>Testing</title>
+  <meta property="og:title" content="Testing" />
   <meta property="og:type" content="website" />
   <meta name="description" content="" />
 
   <link rel="stylesheet" href="/css/flexboxgrid-6.3.1.min.css" />
   
   <link rel="stylesheet" href="/css/index.css">
-  <link href="/index.xml" rel="alternate" type="application/rss+xml" title="Xi Pu&#39;s blog">
+  <link href="/index.xml" rel="alternate" type="application/rss+xml" title="Testing">
   
   <link href="https://fonts.googleapis.com/css?family=Arvo|Permanent+Marker" rel="stylesheet">
   
